Bug 571881: [Architecture] Model creation sets architecture context too late
- initialize the model-set's architecture context before creating the model
  so that configuration of the new model can leverage its element types

Change-Id: I27edabdf4428c81e186305a458cafcebb3211408
Signed-off-by: Christian W. Damus <give.a.damus@gmail.com>